[package]
name = "pie"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "4.0.1"
ansi_term = "0.12"
spinach = "2"
ctrlc = { version = "3.0", features = ["termination"] }